热榜增加新的缓存逻辑，修改文章接口增加新的删缓存逻辑